# CHiPPS-BiCePS

./: .gitattributes  .gitignore  Dependencies  Externals  Externals.release  Externals.stable  INSTALL  INSTALL.md  LICENSE  Makefile.am  Makefile.in  README  README.md  bcps.pc.in  configure  configure.ac
.coin-or/: Dependencies  config.yml  generate_readme  projDesc.xml
.github/workflows/: linux-ci.yml
Bcps/: AUTHORS  Makefile.am  Makefile.in  README  bcps-uninstalled.pc.in  bcps.pc.in  configure  configure.ac
Bcps/MSVisualStudio/v10/: libBcps.vcxproj
Bcps/MSVisualStudio/v8/: libBcps.vcproj
Bcps/MSVisualStudio/v9/: libBcps.vcproj
Bcps/examples/Blis/: Blis.h  BlisBranchObjectInt.cpp  BlisBranchObjectInt.h  BlisBranchStrategyPseudo.cpp  BlisBranchStrategyPseudo.h  BlisBranchStrategyRel.cpp  BlisBranchStrategyRel.h  BlisBranchStrategyStrong.cpp  BlisBranchStrategyStrong.h  BlisConGenerator.cpp  BlisConGenerator.h  BlisConstraint.cpp  BlisConstraint.h  BlisHelp.cpp  BlisHelp.h  BlisHeurRound.cpp  BlisHeurRound.h  BlisHeuristic.h  BlisLicense.h  BlisMain.cpp  BlisMessage.cpp  BlisMessage.h  BlisModel.cpp  BlisModel.h  BlisNodeDesc.h  BlisObjectInt.cpp  BlisObjectInt.h  BlisParams.cpp  BlisParams.h  BlisPseudo.cpp  BlisPseudo.h  BlisSolution.h  BlisSubTree.h  BlisTreeNode.cpp  BlisTreeNode.h  BlisVariable.h  INSTALL  Makefile.in  README
Bcps/examples/Blis/MSVisualStudio/v10/: Blis.sln  Blis.vcxproj
Bcps/examples/Blis/MSVisualStudio/v8/: Blis.sln
Bcps/examples/Blis/MSVisualStudio/v9/: Blis.sln  Blis.vcproj
Bcps/examples/Blis/Win32/v8/: Blis.sln  Blis.vcproj
Bcps/examples/Blis/data/: gen.mps
Bcps/inc/: config_bcps.h.in  config_biceps.h.in
Bcps/src/: Bcps.h  BcpsBranchObject.cpp  BcpsBranchObject.h  BcpsBranchStrategy.cpp  BcpsBranchStrategy.h  BcpsConfig.h  BcpsInterface.h  BcpsLicense.h  BcpsMessage.cpp  BcpsMessage.h  BcpsModel.cpp  BcpsModel.h  BcpsNodeDesc.cpp  BcpsNodeDesc.h  BcpsObject.cpp  BcpsObject.h  BcpsObjectPool.cpp  BcpsObjectPool.h  BcpsSolution.cpp  BcpsSolution.h  BcpsSubTree.cpp  BcpsSubTree.h  BcpsTreeNode.cpp  BcpsTreeNode.h  Makefile.am  Makefile.in  config.h.in  config_bcps.h.in  config_bcps_default.h  config_default.h
Bcps/test/: Makefile.am  Makefile.in
Doxygen/: index.md
Doxygen/0.94/: BcpsBranchObject_8h.html  BcpsBranchObject_8h__dep__incl.map  BcpsBranchObject_8h__dep__incl.md5  BcpsBranchObject_8h__incl.map  BcpsBranchObject_8h__incl.md5  BcpsBranchObject_8h_source.html  BcpsBranchStrategy_8h.html  BcpsBranchStrategy_8h__dep__incl.map  BcpsBranchStrategy_8h__dep__incl.md5  BcpsBranchStrategy_8h__incl.map  BcpsBranchStrategy_8h__incl.md5  BcpsBranchStrategy_8h_source.html  BcpsConfig_8h.html  BcpsConfig_8h__incl.map  BcpsConfig_8h__incl.md5  BcpsConfig_8h_source.html  BcpsInterface_8h.html  BcpsInterface_8h__incl.map  BcpsInterface_8h__incl.md5  BcpsInterface_8h_source.html  BcpsLicense_8h.html  BcpsLicense_8h__dep__incl.map  BcpsLicense_8h__dep__incl.md5  BcpsLicense_8h_source.html  BcpsMessage_8h.html  BcpsMessage_8h__dep__incl.map  BcpsMessage_8h__dep__incl.md5  BcpsMessage_8h__incl.map  BcpsMessage_8h__incl.md5  BcpsMessage_8h_source.html  BcpsModel_8h.html  BcpsModel_8h__dep__incl.map  BcpsModel_8h__dep__incl.md5  BcpsModel_8h__incl.map  BcpsModel_8h__incl.md5  BcpsModel_8h_source.html  BcpsNodeDesc_8h.html  BcpsNodeDesc_8h__dep__incl.map  BcpsNodeDesc_8h__dep__incl.md5  BcpsNodeDesc_8h__incl.map  (+660 more)
Doxygen/0.94/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+51 more)
MSVisualStudio/v9/: libBcps.vcproj
Win32/v8/: libBcps.vcproj
examples/Blis/: Blis.h  BlisBranchObjectInt.cpp  BlisBranchStrategyPseudo.h  BlisBranchStrategyRel.cpp  BlisBranchStrategyStrong.cpp  BlisBranchStrategyStrong.h  BlisConGenerator.cpp  BlisConstraint.h  BlisHelp.h  BlisHeurRound.cpp  BlisHeurRound.h  BlisHeuristic.h  BlisMain.cpp  BlisMessage.cpp  BlisMessage.h  BlisModel.cpp  BlisModel.h  BlisNodeDesc.h  BlisObjectInt.cpp  BlisObjectInt.h  BlisParams.cpp  BlisPseudo.cpp  BlisPseudo.h  BlisSolution.h  BlisSubTree.h  BlisTreeNode.cpp  BlisVariable.h  Makefile.in  README  blis.par.in
examples/Blis/MSVisualStudio/v10/: Blis.vcxproj
src/: Bcps.h  BcpsBranchObject.cpp  BcpsBranchObject.h  BcpsBranchStrategy.cpp  BcpsBranchStrategy.h  BcpsConfig.h  BcpsInterface.h  BcpsLicense.h  BcpsMessage.cpp  BcpsMessage.h  BcpsModel.cpp  BcpsModel.h  BcpsNodeDesc.cpp  BcpsNodeDesc.h  BcpsObject.cpp  BcpsObject.h  BcpsObjectPool.cpp  BcpsObjectPool.h  BcpsSolution.cpp  BcpsSolution.h  BcpsSubTree.h  BcpsTreeNode.cpp  BcpsTreeNode.h  Makefile.am  Makefile.in  config_bcps.h.in  config_bcps_default.h  config_default.h
stable/0.8/: configure  configure.ac
stable/0.8/Bcps/: configure.ac
stable/0.8/Bcps/examples/Blis/: BlisBranchStrategyPseudo.cpp  BlisMain.cpp  BlisObjectInt.h  BlisParams.cpp  BlisVariable.h  README
stable/0.8/Bcps/examples/Blis/Win32/v8/: Blis.vcproj
stable/0.8/Bcps/inc/: config_bcps.h.in
stable/0.8/Bcps/src/: Bcps.h  BcpsLicense.h  BcpsMessage.cpp  BcpsModel.h
test/: Makefile.am  Makefile.in
trunk/: Externals.stable  Makefile.am
trunk/Bcps/: README  configure
trunk/Bcps/examples/Blis/: BlisBranchObjectInt.h  BlisBranchStrategyPseudo.h  BlisConGenerator.cpp  BlisHelp.cpp  BlisLicense.h  BlisMessage.cpp  BlisMessage.h  BlisNodeDesc.h  BlisParams.h  blis.par.in
trunk/Bcps/src/: Bcps.h  BcpsBranchObject.cpp  BcpsConfig.h  BcpsObject.h  BcpsObjectPool.h  BcpsTreeNode.h  Makefile.am
