#==========================================================================#
# This file is part of the Abstract Library for Parallel Search (ALPS).    #
#                                                                          #
# ALPS is distributed under the Eclipse Public License as part of the      #
# COIN-OR repository (http://www.coin-or.org).                             #
#                                                                          #
# Authors:                                                                 #
#                                                                          #
#          Yan Xu, Lehigh University                                       #
#          Ted Ralphs, Lehigh University                                   #
#                                                                          #
# Conceptual Design:                                                       #
#                                                                          #
#          Yan Xu, Lehigh University                                       #
#          Ted Ralphs, Lehigh University                                   #
#          Laszlo Ladanyi, IBM T.J. Watson Research Center                 #
#          Matthew Saltzman, Clemson University                            #
#                                                                          #
#                                                                          #
# Copyright (C) 2001-2011, Lehigh University, Yan Xu, and Ted Ralphs.      #
# All Rights Reserved.                                                     #
#==========================================================================#

## $Id: Makefile.am 507 2006-06-03 03:20:16Z andreasw $

# Author:  Yan Xu Lehigh
#          Yan Xu                     Lehigh    2006-08-27

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for CoinUtils                          #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = \
	BlisBranchObjectInt.cpp BlisBranchObjectInt.h \
	BlisBranchStrategyPseudo.cpp BlisBranchStrategyPseudo.h \
	BlisBranchStrategyRel.cpp BlisBranchStrategyRel.h \
	BlisBranchStrategyStrong.cpp BlisBranchStrategyStrong.h \
	BlisConGenerator.cpp BlisConGenerator.h \
	BlisConstraint.cpp BlisConstraint.h \
	Blis.h \
	BlisHelp.cpp BlisHelp.h \
	BlisHeuristic.h \
	BlisHeurRound.cpp BlisHeurRound.h \
	BlisLicense.h \
	BlisMain.cpp \
	BlisMessage.cpp BlisMessage.h \
	BlisModel.cpp BlisModel.h \
	BlisNodeDesc.h \
	BlisObjectInt.cpp BlisObjectInt.h \
	BlisParams.cpp BlisParams.h \
	BlisPseudo.cpp BlisPseudo.h \
	BlisSolution.h \
	BlisSubTree.h \
	BlisTreeNode.cpp BlisTreeNode.h \
	BlisVariable.h 

# List libraries of COIN projects
unitTest_LDADD = ../src/libBcps.la $(ABC_LIBS) $(BCPSLIB_LIBS)
unitTest_DEPENDENCIES = ../src/libBcps.la $(ABC_DEPENDENCIES) $(BCPSLIB_DEPENDENCIES)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../src` \
        $(ABC_CFLAGS) \
        $(BCPSLIB_CFLAGS)

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` 

test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT) -Alps_instance ./flugpl.mps

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = flugpl.log
